<resources>
    <string name="merchantId">1</string>
    <string name="app_name_">Oriz</string>
    <string name="too_far_msg">This location is too far away from the merchant for Oriz to deliver. Please Pick a location near to the merchant.</string>
    <string name="login_title">Login to Wifyee</string>
    <string name="phone_number">Phone No</string>
    <string name="customer_dob">DOB</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="pass_code">Passcode</string>
    <string name="login_title_bar">User Login</string>
    <string name="sign_up_title_bar">SignUp</string>
    <string name="otp">OTP</string>
    <string name="ref_can">Refund &amp; Cancellation</string>
    <string name="terms_condition">Terms &amp; Condition :</string>
    <string name="request_credit">Request Credit</string>
    <string name="validate_mobile">Validate Mobile Number</string>
    <string name="send_passcode">Send Passcode?</string>
    <string name="resend_otp">Did You Miss OTP Please verify?</string>
    <string name="text_signup">New User?To SignUp</string>
    <string name="first_name">First Name</string>
    <string name="empty_view_text">No data found. Please try after sometimes.</string>
    <string name="last_name">Last Name</string>
    <string name="customer_title">Title</string>
    <string name="customer_address">Address</string>
    <string name="select_plan">Please select atleast one plan.</string>
    <string name="select_payment_mode">Choose Payment Mode</string>
    <string name="enter_phone_number"><font size="16">mobile number</font></string>
    <string name="enter_otp_hints">Enter your otp</string>
    <string name="password_recovery_title">Password recovery questions:</string>
    <string name="otp_validation_title">OTP Validation</string>
    <string name="invalid_number">Invalid Number</string>
    <string name="already_register">Already registered</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="check_your_network_status">Check status</string>
    <string name="account_verification_string">Your account is not verified,Click OK to verify.</string>
    <string name="otp_resend">Click here to resend</string>
    <string name="network_status">Checking Connectivity Status</string>
    <string name="email">E-mail</string>
    <string name="dob">Date of Birth</string>
    <string name="payment_process_title">Payment Process</string>
    <string name="address">Address</string>
    <string name="pincode">Pincode</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="enter_otp">Please enter OTP</string>
    <string name="passcode">Enter 4 digit Numeric value</string>
    <string name="re_psscode">Re-Enter-Passcode</string>
    <string name="sign_in_progress">Logging In...</string>
    <string name="phone_number_verification">Phone verification</string>
    <string name="user_registration">Registration</string>
    <string name="email_id">Email address</string>
    <string name="profile_gender">Gender</string>
    <string name="phone_verification_message">Enter your mobile number</string>
    <string name="phone_verification_message1">Verify your mobile number</string>
    <string name="answer">answer</string>
    <string name="button_login">Login</string>
    <string name="button_continue">Continue</string>
    <string name="button_qr_code">Qr Code</string>
    <string name="button_next">Next</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="error_message">Something went wrong.Please contact to Admin</string>
    <string name="dialog_error">Error</string>
    <string name="feature_is_not_available_message">Feature is not available.</string>
    <string name="recharge_pay_for">Recharge or Pay</string>
    <string name="login_status_text">"You have Successfully logged in to OZONE"</string>
    <string name="plan_activity">Select Plan</string>
    <string name="progress_wait_text">Please Wait ...</string>
    <string name="internet_innovator">INNOVATING INTERNET</string>
    <string name="empty_clientid_or_passcode_or_hash_error_message">Something went wrong. Please login again!</string>
    <string name="firstname_error_message">First name required.</string>
    <string name="lastname_error_message">Last name required.</string>
    <string name="username_error_message">User name required.</string>
    <string name="language_error_message">Select your lanuage.</string>
    <string name="phone_number_error_message">Invalid Phone no. Enter 10 digit phone no.</string>
    <string name="email_error_message">Enter valid email id.</string>
    <string name="zipcode_error_message">Invalid Postal code.</string>
    <string name="adhaar_number_error_message">Invalid Adhaar Number.</string>
    <string name="pan_number_error_message">Invalid PAN account number.</string>
    <string name="email_number_error_message">Invalid Email Id.</string>
    <string name="passcode_error_message">Invalid Password. Please use 4 digit passcode</string>
    <string name="pincode_error_message">Invalid Pincode. Please use 6 digit of your pincode(postal code)</string>
    <string name="new_passcode_error_message">Invalid New Passcode. Please use 4 digit passcode</string>
    <string name="reenter_passcode_error_message">Invalid New Passcode reentered. Please use 4 digit passcode</string>
    <string name="passcode_not_matching_error_message">New password and Re-Entered password not matching</string>
    <string name="dialog_ok">OK</string>
    <string name="google_maps_key">AIzaSyAcgqH5BZNM_JwvxVV9paC1Z8-df0mYqeo</string>
    <string name="place_api_key">AIzaSyBMIqw8GSiNIEW_ccxIPUNcPxDVR1vQ0G0</string>
    <string name="show_the_nearest_restaurants">Show the nearest restaurants</string>
    <string name="signup_status_title">SignUp Status</string>
    <string name="otp_status_title">OTP Status</string>
    <string name="title_status">Status</string>
    <string name="registration_success">You are successfully register.</string>
    <string name="otp_success">You are successfully Generate OTP.</string>
    <string name="menu_home">Home</string>
    <string name="menu_bank_transfer">Transfer</string>
    <string name="menu_add_benificery">Beneficiary</string>
    <string name="my_cart">Cart</string>
    <string name="my_order">My Order</string>
    <string name="menu_product">Dairy Product</string>
    <string name="menu_medicine">Medicine Order</string>
    <string name="menu_log">Log</string>
    <string name="menu_profile">Profile</string>
    <string name="add_bene">Add Beneficiary</string>
    <string name="add_kyc">Add KYC</string>
    <string name="update_bene">Update Beneficiary</string>
    <string name="add_kyc_details">Add KYC Details:</string>
    <string name="for_id_proof">For ID Proof:</string>
    <string name="kyc_document">KYC Document:</string>
    <string name="kyc_type">KYC Type:</string>
    <string name="travel_category">Travel Category:</string>
    <string name="travel_to">To:</string>
    <string name="number_of_people">Number of people:</string>
    <string name="travel_from">From:</string>
    <string name="document_number">Document Number:</string>
    <string name="upload_document_file">Upload Document File:</string>
    <string name="for_address_proof">For Address Proof:</string>
    <string name="place_details">
    <![CDATA[
        <b>%1$s</b>
        <br/>
        <i>Place Id: %2$s</i>
        <br/>
        Address: %3$s
        <br/>
        Phone: %4$s
        <br/>
        Website: %5$s
    ]]>
    </string>
    <string name="serial_number">S.NO.</string>
    <string name="name">NAME</string>
    <string name="nick_name">NICK NAME</string>
    <string name="mobile">MOBILE</string>
    <string name="bank_name">BANK NAME</string>
    <string name="account_number">ACCOUNT NUMBER</string>
    <string name="ifsc_code">IFSC CODE</string>
    <string name="status">STATUS</string>
    <string name="is_verified">ISVERIFIED</string>
    <string name="transaction_id"> ID</string>
    <string name="transaction_date">DATE</string>
    <string name="transaction_amount">AMOUNT</string>
    <string name="transaction_ben_mobile">BENEFICIARY MOBILE</string>
    <string name="transaction_account_number">ACCOUNT NUMBER</string>
    <string name="transaction_ifsc_code">IFSC CODE</string>
    <string name="transaction_status">STATUS</string>
    <string name="transaction_reference_number">REFERENCE NO</string>
    <string name="beneficiary_first_name">Beneficiary First Name:</string>
    <string name="beneficiary_last_name">Beneficiary Last Name:</string>
    <string name="beneficiary_account_number">Account Number:</string>
    <string name="beneficiary_ifsc_code">IFSC Code:</string>
    <string name="beneficiary_mobile">Beneficiary Mobile Number:</string>
    <string name="branch">Bank Branch Name:</string>
    <string name="bank">Bank Name:</string>
    <string name="bank_address">Bank Address:</string>
    <string name="bank_state">Bank State:</string>
    <string name="bank_city">Bank City:</string>
    <string name="beneficiary_name">BENEFICIARY NAME:</string>
    <string name="beneficiary_amount">AMOUNT:</string>
    <string name="beneficiary_ac_number"> ACCOUNT NUMBER:</string>
    <string name="beneficiary_ifsc"> IFSC CODE:</string>
    <string name="beneficiary_mobile_number"> BENEFICIARY MOBILE:</string>
    <string name="beneficiary_bank_name"> BANK NAME:</string>
    <string name="beneficiary_kyc_status">KYC STATUS:</string>
    <string name="id_proof_number">ID Proof Document Number:</string>
    <string name="address_proof_number">Address Proof Document Number:</string>
    <string name="update_kyc">Update KYC</string>
    <string name="menu_prepaid">Prepaid</string>
    <string name="menu_postpaid">Postpaid</string>
    <string name="menu_landline">Landline</string>
    <string name="menu_dth">DTH</string>
    <string name="menu_gas">Gas</string>
    <string name="menu_broadband">Broadband</string>
    <string name="menu_electricity">Electricity</string>
    <string name="status_connected_text">You are successfully connected to \n %1$s</string>
    <string name="status_error_text">An error has occurred. Please try again after some time.</string>
    <string name="error_ozone_network">This Application is to be used in an OZONE network only. Please open when connected to a valid OZONE Network</string>
    <string name="error_no_ozone_zone"> Your current connection is not via an OZONE Network</string>
    <string name="order_food">Order Food</string>
    <string name="deals_around_me">Deals around Me</string>
    <string name="calling">Calling</string>
    <string name="connect">Connect</string>
    <string name="buy_plans">Buy Plans</string>
    <string name="free_wifyee">FREE WIFI + OFFERS</string>
    <string name="discover_wifyee">SHOPPING MALL</string>
    <string name="menu_offer_discount">Offers/Discounts</string>
    <string name="menu_add_money">Add Money</string>
    <string name="menu_request_credit">Request Credit</string>
    <string name="menu_send_money">Send Money</string>
    <string name="menu_request_money">Request Money</string>
    <string name="menu_air_line">Air Line</string>
    <string name="menu_bus_ticket">Bus Ticket</string>
    <string name="select"> Select</string>
    <string name="amount">Amount</string>
    <string name="comments">Comments</string>
    <string name="submit">Submit</string>
    <string name="choose_bank">Choose Your Bank</string>
    <string name="select_bank">Select Other Banks</string>
    <string name="redirection_text">You will be redirected to your banks website to complete payment</string>
    <string name="axis_bank">AXIS</string>
    <string name="hdfc">HDFC</string>
    <string name="citi">CITI</string>
    <string name="sbi">SBI</string>
    <string name="icici">ICICI</string>
    <string name="cancel">"Cancel"</string>
</resources>