<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:scrollbars="none"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:orientation="vertical">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/benef_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/beneficiary_first_name"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/benef_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/beneficiary_last_name"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/benef_account_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="16"
                        android:hint="@string/beneficiary_account_number"/>

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/benef_ifsc_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLength="12"
                        android:hint="@string/beneficiary_ifsc_code"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/benef_mobile_number"
                        android:layout_width="match_parent"
                        android:maxLength="10"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:hint="@string/beneficiary_mobile"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/bank_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/bank"/>

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/bank_branch_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/branch"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/bank_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/bank_address"/>

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/bank_state"
                    android:layout_marginTop="5dp"
                    android:padding="5dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:layout_height="wrap_content">
                </TextView>
                    <Spinner
                        android:id="@+id/bank_state"
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                       />
                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/bank_city"
                    android:layout_marginTop="5dp"
                    android:padding="5dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:layout_height="wrap_content">
                </TextView>
                <Spinner
                    android:id="@+id/bank_city"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/add_beneficiary_ac"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:textColor="#ffffff"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/selector_xml_btn_yellow"
                    android:text="@string/add_bene" />
                <Button
                    android:id="@+id/cancel"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:textColor="#ffffff"
                    android:layout_weight="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/selector_xml_btn_yellow"
                    android:text="@string/cancel" />
            </LinearLayout>
            </LinearLayout>
        </ScrollView>

</LinearLayout>