<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="2dp"
        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark">

        <!--<ImageButton
            android:id="@+id/toolbar_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="@mipmap/back_arrow_icon" />-->

        <TextView
            android:id="@+id/user_balance"
            style="@style/font_family_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:padding="8dp"
            android:text="@string/request_credit"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <!-- Enter Mobile -->
        <EditText
            android:id="@+id/merchant_mobile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_action_phone"
            android:drawablePadding="8dp"
            android:hint="@string/mobile"
            android:maxLength="10"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/amount"
        android:layout_height="wrap_content">
    <!-- Enter Amount -->
        <EditText
            android:id="@+id/merchant_amount"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_account_balance_wallet"
            android:drawablePadding="8dp"
            android:hint="@string/amount"
            android:maxLength="4"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/comment"
            android:layout_height="wrap_content">
            <!-- Enter Amount -->
            <EditText
                android:id="@+id/edit_text_comments"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_account_balance_wallet"
                android:drawablePadding="8dp"
                android:hint="@string/comments"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_round_cornor_selector"
        android:padding="12dp"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:text="@string/submit" />

    </LinearLayout>
</LinearLayout>