<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="2dp"
        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark">

        <ImageButton
            android:id="@+id/toolbar_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="@mipmap/back_arrow_icon" />

        <TextView
            android:id="@+id/user_balance"
            style="@style/font_family_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:padding="8dp"
            android:text="@string/validate_mobile"
            android:textColor="@color/color_tab_bg"
            android:textSize="18sp"
            android:textStyle="bold" />

    </android.support.v7.widget.Toolbar>


            <!-- Enter Mobile -->
            <EditText
                android:id="@+id/et_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:drawableLeft="@drawable/ic_action_phone"
                android:drawablePadding="10dp"
                android:focusable="true"
                android:hint="@string/enter_phone_number"
                android:maxLength="6"
                android:inputType="text"
                android:maxLines="1"
                android:padding="2dp"
                android:layout_margin="10dp"
                android:textSize="16dp" />

            <Button
                android:id="@+id/submit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"

                android:layout_marginTop="20dp"
                android:background="@drawable/button_round_cornor_selector"
                android:padding="12dp"
                android:layout_margin="10dp"
                android:text="@string/submit" />


</LinearLayout>